--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,11 @@ body {
   background-color: #0f172a;
   color: #f1f5f9;
 }
+
+.exp-card:hover h2:first-child {
+  color: #facc15;
+}
+.exp-card:hover .arrow-upward {
+  transform: translate3d(5px, -5px, 0px);
+  transition: 0.15s ease-in;
+}
