--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   background-color: #0f172a;
   color: #f1f5f9;
@@ -15,3 +18,5 @@ body {
   transform: translate3d(5px, -5px, 0px);
   transition: 0.15s ease-in;
 }
+
+
