add: Floating Navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,14 @@ body {
   transform: translate3d(5px, -5px, 0px);
   transition: 0.15s ease-in;
 }
+.glass-effect {
+  background: rgba(3, 12, 30, 0.69);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
+  border: 1px solid rgba(78, 80, 85, 0.3);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
